[tool.poetry]
name = "fks_engine"
version = "0.1.0"
description = "FKS Engine Service (orchestration & backtesting)"
license = "Proprietary"
authors = ["FKS <nunie.smith01@gmail.com>"]
packages = [ { include = "fks_engine", from = "src" } ]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
requests = "*"
flask = "*"

[tool.poetry.extras]
llm = ["httpx"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
httpx = "^0.27"

[tool.poetry.scripts]
fks_engine = "fks_engine.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
pythonpath = [".", "src"]