[tool.poetry]
name = "engine-service"
version = "0.1.0"
description = "FKS Engine Service (flattened src layout)"
license = "Proprietary"
authors = ["nuniesmith"]
# Flattened layout: no dedicated engine_service package; ship framework package + top-level modules
packages = [
	{ include = "framework", from = "src" }
]
include = ["src/main.py", "src/_impl.py"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
requests = "*"
flask = "*"

[tool.poetry.extras]
llm = ["httpx"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^1.1"
httpx = "^0.27"

[tool.poetry.scripts]
engine = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
pythonpath = [".", "src"]